[metadata]
name = konrad
author = The konrad developers
version = attr: konrad.__version__
url = https://github.com/atmtools/konrad
license = MIT
description = 'Implementation of a radiative-convective equilibrium model.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
packages = find_namespace:
include_package_data = True
install_requires =
    matplotlib>=2.0.0
    netcdf4>=1.2.7
    numpy>1.22.0
    scipy>=0.19.0
    typhon>=0.7.0
    xarray>=0.9.1
    climt>=0.16.25
    sympl>=0.4.0

[options.extras_require]
arts =
    pyarts
docs =
    jupyter-book
    sphinx
    sphinx_rtd_theme
tests =
    pytest
